// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - CustomRadioButton renders correctly 1`] = `
Array [
  <input
    className="sc-bdVaJa fSxYGG"
    id="123"
    name="name123"
    type="radio"
    value="value123"
  />,
  <label
    className="sc-htpNat ogKcV"
    htmlFor="123"
  >
    label123
  </label>,
]
`;

exports[`COMPONENT - CustomRadioButton renders correctly with icon 1`] = `
Array [
  <input
    className="sc-bdVaJa dhNOxq"
    id="123"
    name="name123"
    type="radio"
    value="value123"
  />,
  <label
    className="sc-bwzfXH bKRWOi"
    htmlFor="123"
  >
    label123
  </label>,
]
`;
